perf: 改进设置对话框标题内容 | Improve the title content of the settings dialog.

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -1,4 +1,5 @@
 {
+    "displayName": "Jupyter Client",
     "document_settings": "Document Settings",
     "global_settings": "Global Settings",
     "top_bar_title": "Jupyter Client"
