--- a/public/i18n/zh_CHT.json
+++ b/public/i18n/zh_CHT.json
@@ -1,4 +1,5 @@
 {
+    "displayName": "Jupyter 客戶端",
     "document_settings": "文檔設置",
     "global_settings": "全局配置",
     "top_bar_title": "Jupyter 客戶端"
