--- a/public/i18n/zh_CHT.json
+++ b/public/i18n/zh_CHT.json
@@ -1,6 +1,13 @@
 {
     "displayName": "Jupyter 客戶端",
-    "document_settings": "文檔設置",
-    "global_settings": "全局配置",
-    "top_bar_title": "Jupyter 客戶端"
+    "settings": {
+        "generalSettings": {
+            "reset": {
+                "description": "重置所有設定選項為預設選項（重置後將重新整理頁面）",
+                "text": "重置",
+                "title": "重置設定選項"
+            },
+            "title": "常規設定"
+        }
+    }
 }
