--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -1,7 +1,13 @@
-
 {
     "displayName": "Jupyter 客户端",
-    "document_settings": "文档设置",
-    "global_settings": "全局设置",
-    "top_bar_title": "Jupyter 客户端"
+    "settings": {
+        "generalSettings": {
+            "reset": {
+                "description": "重置所有设置选项为默认选项（重置后将刷新页面）",
+                "text": "重置",
+                "title": "重置设置选项"
+            },
+            "title": "常规设置"
+        }
+    }
 }
