--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -6,13 +6,16 @@
             "ariaLabel": "刷新"
         },
         "kernelspecs": {
-            "text": "可用的内核"
+            "text": "已安装内核"
         },
         "kernels": {
-            "text": "启用的内核"
+            "text": "运行的内核"
+        },
+        "resources": {
+            "text": "Jupyter 资源列表"
         },
         "sessions": {
-            "text": "启用的会话"
+            "text": "运行的会话"
         },
         "menu": {
             "shutdownKernel": {
