--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -39,6 +39,21 @@
         "title": "Jupyter"
     },
     "menu": {
+        "open": {
+            "label": "打开"
+        },
+        "openTab": {
+            "label": "在新页签中打开"
+        },
+        "openTabBackground": {
+            "label": "在后台页签中打开"
+        },
+        "openTabBottom": {
+            "label": "在页签下侧打开"
+        },
+        "openTabRight": {
+            "label": "在页签右侧打开"
+        },
         "run": {
             "label": "运行",
             "submenu": {
