feat(jupyter-client): 实现输入请求功能 | Implement input request function.

--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -4,6 +4,9 @@
         "uninitialized": {
             "text": "Jupyter 客户端未初始化"
         },
+        "inputRequest": {
+            "title": "输入请求"
+        },
         "lastRunTime": {
             "text": "上次执行"
         },
