feat(jupyter-client): 实现输出流解析功能 | Implement output stream parsing function.

--- a/public/i18n/zh_CN.json
+++ b/public/i18n/zh_CN.json
@@ -76,6 +76,9 @@
                 "custom": {
                     "label": "使用自定义配置项运行"
                 },
+                "terminal": {
+                    "label": "输出内容至终端"
+                },
                 "escape": {
                     "enable": {
                         "label": "输出转义文本",
